Forgot to add ostream_operators.cc to contribmerge sources, adding it now.
Will not have any effect yet, as ostream_operators.cc is "empty", but
will be needed later.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -17,4 +17,4 @@ configure_file (
 # make it possible to find the generated sys.h
 include_directories("${CMAKE_CURRENT_BINARY_DIR}")
 
-add_executable(contribmerge contribmerge.cc)
+add_executable(contribmerge contribmerge.cc ostream_operators.cc)
