Split off the 3-way merge algorithm into a separate file.
Made the 3-way merge algorithm general and use it
recursively to complete the merge of ContributionsTxt.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -30,7 +30,8 @@ contribmerge_SOURCES = \
 	InputRange.h \
 	Inserter.h \
 	JiraProjectKey.h \
-	ostream_operators.h
+	ostream_operators.h \
+	three_way_merge.h
 
 contribmerge_CXXFLAGS = @CXXFLAGS@ @CWD_FLAGS@
 contribmerge_LDADD = @LIBS@ @CWD_LIBS@
