--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,5 +11,7 @@
 cmake_minimum_required (VERSION 2.6)
 project (ContribMerge)
 
-add_subdirectory(src)
+enable_testing()
 
+add_subdirectory(src)
+add_subdirectory(testinputs)
