made test names more descriptive

--- a/testinputs/CMakeLists.txt
+++ b/testinputs/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(MERGE_TEST_DRIVER "${CMAKE_CURRENT_SOURCE_DIR}/merge_test.py" "${PROJECT_BINARY_DIR}/src/contribmerge")
 
-add_test( test1
+add_test(dont_introduce_whitespace_errors
 	${MERGE_TEST_DRIVER} # Quotes intentionally ommitted. (String list in variable has to be expanded)
 	"${CMAKE_CURRENT_SOURCE_DIR}/base.txt"
 	"${CMAKE_CURRENT_SOURCE_DIR}/whitespace_error.txt"
@@ -8,15 +8,15 @@ add_test( test1
 	"${CMAKE_CURRENT_SOURCE_DIR}/result1.txt" # avoid introducing errors by merge, but replacing one error with another is ok
 )
 
-add_test( test2
+add_test(accept_whitespace_corrections
 	${MERGE_TEST_DRIVER} # Quotes intentionally ommitted. (String list in variable has to be expanded)
 	"${CMAKE_CURRENT_SOURCE_DIR}/base.txt"
 	"${CMAKE_CURRENT_SOURCE_DIR}/whitespace_correction.txt"
 	"${CMAKE_CURRENT_SOURCE_DIR}/base.txt"
-	"${CMAKE_CURRENT_SOURCE_DIR}/whitespace_correction.txt" # (trivial)
+	"${CMAKE_CURRENT_SOURCE_DIR}/whitespace_correction.txt"
 )
 
-add_test( test3
+add_test(prefer_whitespace_corrections_over_new_errors
 	${MERGE_TEST_DRIVER} # Quotes intentionally ommitted. (String list in variable has to be expanded)
 	"${CMAKE_CURRENT_SOURCE_DIR}/base.txt"
 	"${CMAKE_CURRENT_SOURCE_DIR}/whitespace_correction.txt"
@@ -24,7 +24,7 @@ add_test( test3
 	"${CMAKE_CURRENT_SOURCE_DIR}/whitespace_correction.txt" # let corrections win over errors
 )
 
-add_test( test4
+add_test(accept_new_errors_if_branches_agree
 	${MERGE_TEST_DRIVER} # Quotes intentionally ommitted. (String list in variable has to be expanded)
 	"${CMAKE_CURRENT_SOURCE_DIR}/base.txt"
 	"${CMAKE_CURRENT_SOURCE_DIR}/whitespace_error.txt"
@@ -32,23 +32,23 @@ add_test( test4
 	"${CMAKE_CURRENT_SOURCE_DIR}/whitespace_error.txt" # if both branches agree about introducing errors, who are we to disagree?
 )
 
-add_test( test5
+add_test(one_branch_adds_issue
 	${MERGE_TEST_DRIVER} # Quotes intentionally ommitted. (String list in variable has to be expanded)
 	"${CMAKE_CURRENT_SOURCE_DIR}/base.txt"
 	"${CMAKE_CURRENT_SOURCE_DIR}/added_issue.txt"
 	"${CMAKE_CURRENT_SOURCE_DIR}/base.txt"
-	"${CMAKE_CURRENT_SOURCE_DIR}/added_issue.txt" # (trivial)
+	"${CMAKE_CURRENT_SOURCE_DIR}/added_issue.txt"
 )
 
-add_test( test6
+add_test(one_branch_removes_issue
 	${MERGE_TEST_DRIVER} # Quotes intentionally ommitted. (String list in variable has to be expanded)
 	"${CMAKE_CURRENT_SOURCE_DIR}/added_issue.txt"
 	"${CMAKE_CURRENT_SOURCE_DIR}/added_issue.txt"
 	"${CMAKE_CURRENT_SOURCE_DIR}/base.txt"
-	"${CMAKE_CURRENT_SOURCE_DIR}/base.txt" # (trivial removal)
+	"${CMAKE_CURRENT_SOURCE_DIR}/base.txt"
 )
 
-add_test( test7
+add_test(merge_VWR-24487_into_upstream
 	${MERGE_TEST_DRIVER} # Quotes intentionally ommitted. (String list in variable has to be expanded)
 	"${CMAKE_CURRENT_SOURCE_DIR}/fc7e5dcf3059.txt"
 	"${CMAKE_CURRENT_SOURCE_DIR}/base.txt"
@@ -56,7 +56,7 @@ add_test( test7
 	"${CMAKE_CURRENT_SOURCE_DIR}/added_issue.txt" # real world example
 )
 
-add_test( test8
+add_test(merge_VWR-24487_into_upstream
 	${MERGE_TEST_DRIVER} # Quotes intentionally ommitted. (String list in variable has to be expanded)
 	"${CMAKE_CURRENT_SOURCE_DIR}/fc7e5dcf3059.txt"
 	"${CMAKE_CURRENT_SOURCE_DIR}/VWR-24487.txt"
@@ -64,7 +64,7 @@ add_test( test8
 	"${CMAKE_CURRENT_SOURCE_DIR}/non-conflict_merge.txt" # another real world example
 )
 
-add_test( test9
+add_test(conflicting_additions_need_sorting
 	${MERGE_TEST_DRIVER} # Quotes intentionally ommitted. (String list in variable has to be expanded)
 	"${CMAKE_CURRENT_SOURCE_DIR}/base.txt"
 	"${CMAKE_CURRENT_SOURCE_DIR}/DN-9999798.txt"
@@ -72,7 +72,7 @@ add_test( test9
 	"${CMAKE_CURRENT_SOURCE_DIR}/DN-merged.txt" # two conflicting additions (just need sorting)
 )
 
-add_test( test10
+add_test(removal_of_nearby_issues
 	${MERGE_TEST_DRIVER} # Quotes intentionally ommitted. (String list in variable has to be expanded)
 	"${CMAKE_CURRENT_SOURCE_DIR}/DN-merged.txt"
 	"${CMAKE_CURRENT_SOURCE_DIR}/DN-9999798.txt"
@@ -80,7 +80,7 @@ add_test( test10
 	"${CMAKE_CURRENT_SOURCE_DIR}/base.txt" # two nearby removals
 )
 
-add_test( test11
+add_test(add_one_issue_remove_another_issue
 	${MERGE_TEST_DRIVER} # Quotes intentionally ommitted. (String list in variable has to be expanded)
 	"${CMAKE_CURRENT_SOURCE_DIR}/DN-9999798.txt"
 	"${CMAKE_CURRENT_SOURCE_DIR}/DN-merged.txt"
